# humaniste_recomendation

./: README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  db.py  embeddings.py  initial_batch.py  main.py  microcms.py  models.py  normalizer.py  service.py
