[project]
name = "humaniste-recomendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
  "SQLAlchemy>=2.0",
  "pgvector>=0.3",
  "psycopg[binary]>=3.2",
  "openai>=1.51",
  "beautifulsoup4>=4.12",
  "lxml>=5.3",
  "tenacity>=9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

